--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,8 @@
 @media (max-width:991px){
+    html, body {
+        height: 100%;
+        overflow: scroll;
+      }
     .navbar{
         position: static;
     }
