--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ preloder end
 .navbar {
   position: absolute;
   box-shadow: 1px 1px 7px #e1e1e1;
+  z-index: 9999;
 }
 .navbar .navbar-brand {
   width: 90px;
@@ -92,7 +93,7 @@ preloder end
   color: #fff;
 }
 .navbar .navbar-toggler {
-  position: absolute;
+  position: relative;
   right: 35px;
   top: 30px;
 }
@@ -154,7 +155,6 @@ header-section end
 ================*/
 .tab-content {
   padding-left: 90px !important;
-  height: 100vh;
 }
 
 #home .home-text {
@@ -262,5 +262,91 @@ header-section end
     margin-left: 0;
   }
 }
-
-/*# sourceMappingURL=style.css.map */
+/* ============
+ Home section end 
+=============== */
+#about .container {
+  position: relative;
+  z-index: 1;
+  background: #fff;
+}
+#about .container::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 6px;
+  z-index: -1;
+  transition: all 0s;
+  background-image: url(data:img/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJUlEQVQoU2N8+vTpfwYGBgZpaWlGEI0LMBKtEJ8pyHJ4rRtVCAAd/QgLwKUsAgAAAABJRU5ErkJggg==) !important;
+  background-position: 0 0px !important;
+  background-repeat: repeat !important;
+  background-size: 15px;
+  width: 150px;
+  height: 150px;
+  transform: rotate(45deg);
+}
+#about .container .feature-item {
+  padding: 30px 25px !important;
+  box-shadow: 0px 0px 8px 1px rgba(145, 140, 145, 0.35);
+  background: #fff;
+  border-radius: 10px;
+  transition: all linear 0.4s;
+  -moz-transition: all linear 0.4s;
+  -webkit-transition: all linear 0.4s;
+  -o-transition: all linear 0.4s;
+}
+#about .container .feature-item:hover {
+  background: #4E8CB1;
+  color: #fff !important;
+}
+#about .container .feature-item:hover p {
+  color: #fff;
+}
+#about .container .feature-item .icon i {
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  background: #4E8CB1;
+  border-radius: 50%;
+  line-height: 50px;
+  color: #fff;
+}
+#about .container .feature-item h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+  line-height: 80px;
+  font-weight: 500;
+}
+#about .container .feature-item p {
+  font-family: "Roboto", sans-serif;
+  color: #495057;
+  font-size: 15px;
+  font-weight: 400;
+}
+#about .container .feature-item .icon-tow a {
+  color: #495057 !important;
+}
+#about .container .heading-area {
+  padding-top: 140px;
+  padding-left: 55px !important;
+}
+#about .container .heading-area h4 {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #4E8CB1;
+}
+#about .container .heading-area h3 {
+  font-size: 50px;
+  font-family: "Poppins", sans-serif;
+  color: #0c0a0a;
+  font-weight: 500;
+  margin-top: 15px !important;
+  margin-bottom: 20px !important;
+}
+#about .container .heading-area p {
+  font-family: "Roboto", sans-serif;
+  color: #495057;
+  font-size: 16px;
+  font-weight: 400;
+}
