--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,7 @@
 @media (max-width:991px){
     .navbar{
         position: sticky;
+        width: 100%;
     }
     .navbar .navbar-brand {
         width: 80px;
